# src/FundingProjection.Api/Models/Responses/MonthlyFundingBreakdown.cs
@@ -1,0 +1,10 @@
+﻿namespace SFA.DAS.FundingProjection.Api.Models.Responses;
+
+public sealed record MonthlyFundingBreakdown
+{
+    public long EmployerAccountId { get; init; }
+    public int Month { get; init; }
+    public int Year { get; init; }
+    public decimal CommittedLearnerCost { get; init; }
+    public decimal CommittedTransferOut { get; init; }
+}
